--- a/.github/workflows/label-pr.yml
+++ b/.github/workflows/label-pr.yml
@@ -1,24 +1,14 @@
 name: Label PR for CI
 
-# This workflow runs on all pull request events (e.g., opened, reopened, new commits)
 on:
   pull_request_target:
     types: [opened, reopened]
 
-# Sets the permissions for the GITHUB_TOKEN to allow adding labels.
-permissions:
-  pull-requests: write
-  contents: read       # Required by the permission-checking action
-
 jobs:
   labeler:
-    name: Add "run-ci" label
     runs-on: ubuntu-latest
-
     steps:
-      # Step 1: Check if the PR author has 'write' permission on the repo.
-      # This uses the 'actions-cool/check-user-permission' action.
-      - name: Get User Permission
+      - name: Check user permission
         id: checkAccess
         uses: actions-cool/check-user-permission@v2
         with:
@@ -27,17 +17,15 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Step 2: If the author has write access, add the label.
-      # This step is conditional and only runs if the 'require-result' output
-      # from the previous step ('checkAccess') is 'true'.
-      - name: Add "run-ci" label
+      - name: Add run-ci label
         if: steps.checkAccess.outputs.require-result == 'true'
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             github.rest.issues.addLabels({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
               labels: ['run-ci']
-            })
+            });
