--- a/.github/workflows/vllm-dependency-test.yml
+++ b/.github/workflows/vllm-dependency-test.yml
@@ -15,6 +15,8 @@ on:
       - "scripts/ci/**"
       - "test/**"
       - ".github/workflows/vllm-dependency-test.yml"
+    types: [synchronize, labeled]
+  workflow_dispatch:
 
 concurrency:
   group: vllm-dependency-test-${{ github.ref }}
@@ -22,7 +24,7 @@ concurrency:
 
 jobs:
   vllm-dependency-test:
-    if: (github.event_name == "push") || (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'run-ci')
+    if: github.event_name != 'pull_request' || contains(github.event.pull_request.labels.*.name, 'run-ci')
     runs-on: 1-gpu-runner
     steps:
       - name: Checkout code
