--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -63,7 +63,6 @@ dependencies = [
   "torchvision",
   "cuda-python",
   "flashinfer_python==0.3.1",
-  "nvidia-cutlass-dsl==4.1.0",
   "openai==1.99.1",
   "tiktoken",
   "anthropic>=0.20.0",
@@ -84,7 +83,7 @@ test = [
   "tabulate",
 ]
 all = ["sglang[test]"]
-blackwell = ["sglang[test]"]
+blackwell = ["nvidia-cutlass-dsl==4.1.0", "sglang[test]"]
 dev = ["sglang[test]"]
 
 [project.urls]
