--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -67,7 +67,7 @@ dependencies = [
   "tiktoken",
   "anthropic>=0.20.0",
   "torch_memory_saver==0.0.8",
-  "decord",
+  "decord2",
 ]
 
 [project.optional-dependencies]
